# living-genie

./: .env.example  .gitignore  docker-compose.yml
.agents/skills/git-commit-staged/: SKILL.md
.agents/skills/git-commit-staged/scripts/: commit_helper.sh
docs/: architecture.md  roadmap.md
docs/execution/: v0.1.0.md
docs/requirements/: v0.1.0.md
web/: package.json  pnpm-lock.yaml
web-api/: .env.example  README.md  alembic.ini  pyproject.toml
web-api/alembic/: env.py
web-api/alembic/versions/: 7ea45d0b68b8_create_diary_entries_table.py
web-api/app/: db.py  main.py  models.py  schemas.py  security.py  settings.py
web-api/app/routers/: auth.py  diaries.py  uploads.py
web-api/tests/: conftest.py
web-api/tests/integration/: test_auth.py  test_cross_user_isolation.py  test_diary_lifecycle.py  test_uploads_and_media.py
web-api/tests/unit/: test_schema_validation.py
