[project]
name = "web-api"
version = "0.1.0"
description = "Backend API for Living Genie."
readme = "README.md"
authors = [
    { name = "Samuel Wang", email = "chieh0919@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
